Fix gradle build to include executable and jpackage tasks