@@ -1,41 +1,66 @@
 /*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.1/userguide/building_java_projects.html in the Gradle documentation.
- * This project uses @Incubating APIs which are subject to change.
+ * JavaFX + Gradle + jpackage
+ * Windows (.exe) & Linux (app-image)
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id('org.openjfx.javafxplugin') version '0.1.0'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
-javafx {
-    version = "17"
-    modules("javafx.controls", "javafx.fxml")
-}
+group = "net.chrupki"
+version = "1.0.0"
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
-dependencies {
-    // This dependency is used by the application.
-    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
-    implementation libs.guava
-}
-
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
-application {
-    // Define the main class for the application.
-    mainClass = 'net.chrupki.Patcher'
+javafx {
+    version = "21"
+    modules = [
+            "javafx.controls",
+            "javafx.fxml"
+    ]
 }
+
+dependencies {
+    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
+}
+
+application {
+    mainClass = "net.chrupki.Patcher"
+}
+
+tasks.jar {
+    manifest {
+        attributes(
+                "Main-Class": application.mainClass
+        )
+    }
+}
+
+tasks.register('packageApp', Exec) {
+    group = "distribution"
+    description = "Create native app using jpackage"
+
+    commandLine(
+            "jpackage",
+            "--name", "Patcher",
+            "--input", "build/libs",
+            "--main-jar", jar.archiveFileName.get(),
+            "--main-class", application.mainClass.get(),
+            "--dest", "build/jpackage",
+            "--type", "app-image",
+            "--module-path", configurations.runtimeClasspath.asPath,
+            "--add-modules", "javafx.controls,javafx.fxml",
+    )
+}
+
+
+
